service/tests/requests/snapshots/addresses/addresses_reject_staff_accounts@addresses.snap
---
source: tests/requests/addresses.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"You do not have permission to perform this action.\",\"code\":\"forbidden\"}",
)
