service/tests/requests/snapshots/addresses/customer_can_list_own_addresses@addresses.snap
---
source: tests/requests/addresses.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"pid\":\"PID\",\"addressType\":\"billing\",\"label\":\"Office billing\",\"recipientName\":\"Jane Smith\",\"company\":\"Globex East Africa\",\"lineOne\":\"7 Nkrumah Road\",\"lineTwo\":\"Floor 3\",\"city\":\"Mombasa\",\"region\":\"Mombasa County\",\"postalCode\":\"80100\",\"countryCode\":\"KE\",\"email\":\"jane.smith@globex.com\",\"phone\":\"+254711000022\",\"isDefault\":true,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"addressType\":\"shipping\",\"label\":\"Home\",\"recipientName\":\"Jane Smith\",\"company\":null,\"lineOne\":\"18 Nyali Road\",\"lineTwo\":\"House 6\",\"city\":\"Mombasa\",\"region\":\"Mombasa County\",\"postalCode\":\"80100\",\"countryCode\":\"KE\",\"email\":\"jane.smith@globex.com\",\"phone\":\"+254711000022\",\"isDefault\":true,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}]",
)
